--- a/style.css
+++ b/style.css
@@ -38,12 +38,16 @@ a{
 
 .top-container{
     background-color: #1F2937;
+    display: flex;
+    justify-content: space-evenly;
+    padding: 50px 20px;
 }
 
 .top-container h1{
     font-size: 48px;
     font-weight: bold;
     color: #F9FAF8;
+    margin: 0;
 }
 
 .top-container p{
@@ -51,7 +55,20 @@ a{
     color: #E5E7EB;
 }
 
+.img-place-holder{
+    color: #E5E7EB;
+    width: 500px;
+    height: 200px;
+    background-color: gray;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 button{
     background-color: #3882F6;
     color: #E5E7EB;
+    padding: 8px 20px;
+    border:none;
+    border-radius: 5px;
 }
