--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body{
     flex-direction: column;
     margin: 0;
     padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 
@@ -35,6 +36,7 @@ a{
     font-size: 18px;
     color: #E5E7EB;
 }
+
 
 .top-container{
     background-color: #1F2937;
@@ -72,3 +74,31 @@ button{
     border:none;
     border-radius: 5px;
 }
+
+.main-information h1{
+    text-align: center;
+}
+
+.box-container{
+    display: flex;
+    justify-content: center;
+    gap: 54px;
+}
+
+.box-container .box{
+    width: 150px;
+    height: 150px;
+    border: 3px solid #3882F6;
+    border-radius: 10px;
+}
+
+.texts {
+    display: flex;
+    justify-content: center;
+    gap: 60px;
+}
+
+.texts p {
+    width: 150px;
+}
+
