--- a/style.css
+++ b/style.css
@@ -153,3 +153,10 @@ button{
 .blue-background button{
     border: solid #F9FAF8 2px;
 }
+
+footer{
+    background-color: #1F2937;
+    color: #F9FAF8;
+    text-align: center;
+    padding: 10px;
+}
